# f1tenth_demo

./: .gitignore  README.md  build_f1tenth.sh  run_f1tenth.sh  setup-dev-env.sh
maps/tepper/: map_0201.pgm  map_0201.yaml  map_0201_inflate.pgm  map_0201_inflate.yaml  map_3173.pgm  map_3173.yaml
src/f1tenth_launch/: CMakeLists.txt  package.xml
src/f1tenth_launch/config/: path_planning_param.yaml  pure_pursuit_params.yaml
src/f1tenth_launch/launch/: f1tenth.launch.xml
src/f1tenth_launch/rviz/: default.rviz
src/f1tenth_system/f1tenth_stack/: setup.py
src/f1tenth_system/f1tenth_stack/config/: joy_teleop.yaml
src/f1tenth_system/f1tenth_stack/launch/: sick_tim_5xx.launch
src/f1tenth_system/vesc/vesc_ackermann/src/: vesc_to_odom.cpp
src/particle_filter/config/: localize.yaml
src/particle_filter/launch/: localize_launch.py
src/particle_filter/particle_filter/: particle_filter.py
src/path_planning/: README.md  package.xml  planner_tsp.py  setup.cfg  setup.py
src/path_planning/config/: path_planning_param.yaml
src/path_planning/launch/: path_planning_launch.py
src/path_planning/path_planning/: map_inflator.py  path_planning_base.py  path_planning_node.py  planner.py  planner_nn_2opt.py  smoothing.py
src/pure_pursuit/: CMakeLists.txt  LICENSE  README.md  package.xml  setup.cfg  setup.py
src/pure_pursuit/config/: pure_pursuit_params.yaml
src/pure_pursuit/launch/: pure_pursuit_launch.py
src/pure_pursuit/pure_pursuit/: pure_pursuit.py
